# pybb

./: .editorconfig  Makefile  README  pyproject.toml
src/pybb/: __init__.py
tests/: conftest.py  test_progname.py  test_version.py
