[project]
name = "pybb"
version = "0.0.0"

[project.scripts]
pybb = "pybb:main"

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["./.venv"]

[tool.ruff]
src = ["src", "tests"]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "D", # pydocstyle
]
fixable = ["ALL"]
unfixable = [
  "F401",
  "F841",
  "D212",
  "D202",
  "D205",
  "D212",
  "D400",
  "D415",
  "D104",
  "D105",
]
exclude = [".venv"]

[tool.ruff.isort]
force-single-line = true
force-sort-within-sections = true
# force-to-top               = true
# multi-line-output          = 3
